margin adjusted to prevent overlap of alert messages

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  padding: 30px 5%;
+  padding: 45px 5%;
   background-image: linear-gradient(to bottom right, #ddebff, #fff,  #cce1ff)
 }
 
